@@ -50,5 +50,4 @@ GAMEBOARDSTART 50,50
 #.......................##..#.####................
 #############################.####................
 GAMEBOARDEND
-POS 1 28,49 S
-POS 2 2,1 E
+POS 1 2,1 E
