@@ -95,23 +95,12 @@ namespace TaktikNS {
         er = Bewertung(threads[2].get(),
                        spielraster.nachbarn_frei(bp + Bewegungsrichtung::RECHTS));
 #else
-#if 0
-        cout << spielraster << endl;
-        cout << endl;
-        el = Bewertung(this->wegweite(spielraster, bp + Bewegungsrichtung::LINKS, tiefe_max),
-                       spielraster.nachbarn_frei(bp + Bewegungsrichtung::LINKS));
-        //exit(0);
-        ev = el;
-        er = el;
-#endif
-#if 1
         ev = Bewertung(this->wegweite(spielraster, bp + Bewegungsrichtung::VORWAERTS, tiefe_max),
                        spielraster.nachbarn_frei(bp + Bewegungsrichtung::VORWAERTS));
         el = Bewertung(this->wegweite(spielraster, bp + Bewegungsrichtung::LINKS, tiefe_max),
                        spielraster.nachbarn_frei(bp + Bewegungsrichtung::LINKS));
         er = Bewertung(this->wegweite(spielraster, bp + Bewegungsrichtung::RECHTS, tiefe_max),
                        spielraster.nachbarn_frei(bp + Bewegungsrichtung::RECHTS));
-#endif
 #endif
         dauer = std::chrono::system_clock::now() - zeit_start;
         tiefe_max += 1;
@@ -128,7 +117,7 @@ namespace TaktikNS {
         = Bewertung(this->wegweite(spielraster, bp + Bewegungsrichtung::RECHTS, tiefe_max),
                     spielraster.nachbarn_frei(bp + Bewegungsrichtung::RECHTS));
 #endif
-#if 1
+#if 0
       CLOG << Bewegungsrichtung::VORWAERTS << ": " << ev << endl;
       CLOG << Bewegungsrichtung::LINKS     << ": " << el << endl;
       CLOG << Bewegungsrichtung::RECHTS    << ": " << er << endl;
